SERVER-39335 IndexBuildsCoordinatorMongod runs index build on caller thread during replication mode transitions